name:                classical-ciphers
version:             0.0
synopsis:            Haskell implemention of classical ciphers (Foursquare, Playfair, Vigenère, etc)
homepage:            https://github.com/Changaco/haskell-classical-ciphers
license:             LGPL-3
author:              Changaco
maintainer:          changaco@changaco.oy.lc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
    build-depends: base >= 4
                 , basic-prelude
                 , bytestring
                 , containers
                 , vector
    default-language: Haskell2010
    exposed-modules: ClassicalCiphers
                     ClassicalCiphers.Common
                     ClassicalCiphers.Foursquare
                     ClassicalCiphers.Playfair
                     ClassicalCiphers.Twosquare
                     ClassicalCiphers.Vigenere
    default-extensions: NoImplicitPrelude
                        OverloadedStrings
                        TypeFamilies
    ghc-options: -Wall -O2
    hs-source-dirs: src
    other-modules: Utils


test-suite test
    build-depends: base >= 4
                 , classical-ciphers
                 , containers
                 , hspec
    default-extensions: OverloadedStrings
    default-language: Haskell2010
    ghc-options: -Wall
    hs-source-dirs: test
    main-is: Spec.hs
    type: exitcode-stdio-1.0
